<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/edit_profile"
            android:icon="@drawable/profile"
            android:title="@string/text_profile_view"/>
        <item
            android:id="@+id/notifications"
            android:icon="@drawable/notifications"
            android:title="@string/button_notyf"/>
        <item
            android:id="@+id/chat_list"
            android:icon="@drawable/chat_icon"
            android:title="@string/button_chat_list"/>
        <item
            android:id="@+id/loan"
            android:icon="@drawable/lista_books"
            android:title="@string/button_loans"/>
        <item
            android:id="@+id/scannerqr"
            android:icon="@drawable/scanqrcode"
            android:title="@string/button_scan"/>


    </group>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/nav_logout"
                android:title="@string/button_logout"/>
        </menu>
    </item>
</menu>