<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray_200"
    android:orientation="vertical"
    tools:context=".activities.EditBookActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Space
                android:id="@+id/space"
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:textAlignment="center">

                <Button
                    android:id="@+id/back_btn3"
                    android:layout_width="204dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00626262"
                    android:fontFamily="@font/rosarivo"
                    android:padding="0dp"
                    android:text="@string/address"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="42sp"
                    app:icon="@drawable/baseline_arrow_back_ios_new_24"
                    app:iconSize="40dp" />
            </LinearLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp" />


            <EditText
                android:id="@+id/postal_code"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:background="@drawable/default_border"
                android:ems="10"
                android:foregroundGravity="center"
                android:gravity="center"
                android:hint="@string/postal_code"
                android:inputType="text|textEmailAddress"
                android:padding="10dp"
                android:shadowColor="#FFFFFF"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#A3A3A3"
                android:textColorLink="#FFFFFF" />


            <EditText
                android:id="@+id/state"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:background="@drawable/default_border"
                android:ems="10"
                android:foregroundGravity="center"
                android:gravity="center"
                android:hint="@string/region"
                android:inputType="text|textEmailAddress"
                android:padding="10dp"
                android:shadowColor="#FFFFFF"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#A3A3A3"
                android:textColorLink="#FFFFFF" />

            <EditText
                android:id="@+id/city"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:background="@drawable/default_border"
                android:ems="10"
                android:foregroundGravity="center"
                android:gravity="center"
                android:hint="@string/city"
                android:inputType="text|textEmailAddress"
                android:padding="10dp"
                android:shadowColor="#FFFFFF"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#A3A3A3"
                android:textColorLink="#FFFFFF" />

            <EditText
                android:id="@+id/idstrict"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:background="@drawable/default_border"
                android:ems="10"
                android:foregroundGravity="center"
                android:gravity="center"
                android:hint="@string/district"
                android:inputType="text|textEmailAddress"
                android:padding="10dp"
                android:shadowColor="#FFFFFF"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#A3A3A3"
                android:textColorLink="#FFFFFF" />

            <EditText
                android:id="@+id/street"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:background="@drawable/default_border"
                android:ems="10"
                android:foregroundGravity="center"
                android:gravity="center"
                android:hint="@string/street"
                android:inputType="text|textEmailAddress"
                android:padding="10dp"
                android:shadowColor="#FFFFFF"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#A3A3A3"
                android:textColorLink="#FFFFFF" />

            <EditText
                android:id="@+id/house_number"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:background="@drawable/default_border"
                android:ems="10"
                android:foregroundGravity="center"
                android:gravity="center"
                android:hint="@string/number_house"
                android:inputType="text|textEmailAddress"
                android:padding="10dp"
                android:shadowColor="#FFFFFF"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#A3A3A3"
                android:textColorLink="#FFFFFF" />


            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/localizacao" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:layout_marginBottom="15sp"
                android:fontFamily="@font/rosarivo_regular"
                android:gravity="center"
                android:text="@string/text_map"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp" />


            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnUpdateLocate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#FFFFFF"
                    android:fontFamily="@font/rosarivo_regular"
                    android:gravity="center"
                    android:text="@string/button_update"
                    android:textColor="#000000"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="38dp" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/qr_code"
        android:layout_width="411dp"
        android:layout_height="0dp"
        android:background="#85000000"
        android:duration="1000"
        android:fromAlpha="0.0"
        android:padding="150dp"
        android:toAlpha="1.0"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout4"
        app:srcCompat="@drawable/book" />

</LinearLayout>