<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray_200"
    android:orientation="vertical"
    tools:context=".activities.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Space
                android:id="@+id/space"
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/back_btn1"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorHint="#EDEDED"
                    android:textColorLink="#FFFFFF"
                    app:icon="@drawable/baseline_arrow_back_ios_new_24"
                    app:iconGravity="start"
                    app:iconSize="35dp"
                    app:iconTint="#FFFFFF"
                    app:rippleColor="#FFFFFF" />

                <Button
                    android:id="@+id/back_btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:fontFamily="@font/rosarivo_regular"
                    android:lineSpacingExtra="-25sp"
                    android:padding="0dp"
                    android:text="Cadastrar"
                    android:textColor="@color/colorBlanchedalmond_100_Opaco"
                    android:textSize="42sp"
                    app:iconGravity="start"
                    app:iconSize="35dp"
                    app:iconTint="#FFFFFF" />

                <Button
                    android:id="@+id/back_btn3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00626262"
                    android:fontFamily="@font/rosarivo"
                    android:gravity="start|center_vertical"
                    android:padding="0dp"
                    android:text="Livro"
                    android:textColor="#FFFFFF"
                    android:textSize="42sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:background="#FFFFFF" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <ImageView
                android:id="@+id/cover_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/default_cover_bg" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="50dp"
                android:background="#FFFFFF" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/insert_cover"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:background="@drawable/default_border"
                android:fontFamily="@font/rosarivo_regular"
                android:text="@string/text_image_regBook"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/title"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:background="@drawable/default_border"
                android:completionThreshold="1"
                android:ems="10"
                android:foregroundGravity="center"
                android:hint="@string/title"
                android:inputType="text|textEmailAddress"
                android:padding="10dp"
                android:shadowColor="#FFFFFF"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#A3A3A3"
                android:textColorLink="#FFFFFF" />

            <EditText
                android:id="@+id/author"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:autoText="true"
                android:background="@drawable/default_border"
                android:ems="10"
                android:foregroundGravity="center"
                android:hint="@string/author"
                android:inputType="text|textEmailAddress"
                android:padding="10dp"
                android:shadowColor="#FFFFFF"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#A3A3A3"
                android:textColorLink="#FFFFFF" />

            <EditText
                android:id="@+id/genre"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:autoText="true"
                android:background="@drawable/default_border"
                android:ems="10"
                android:foregroundGravity="center"
                android:hint="@string/gen"
                android:inputType="text|textEmailAddress"
                android:padding="10dp"
                android:shadowColor="#FFFFFF"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#A3A3A3"
                android:textColorLink="#FFFFFF" />

            <EditText
                android:id="@+id/summary"
                android:layout_width="350dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:background="@drawable/default_border"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/resume"
                android:inputType="text|textEmailAddress"
                android:padding="10dp"
                android:shadowColor="#FFFFFF"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#A3A3A3"
                android:textColorLink="#FFFFFF" />

            <EditText
                android:id="@+id/requirements"
                android:layout_width="350dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:background="@drawable/default_border"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/requirements"
                android:inputType="text|textEmailAddress"
                android:padding="10dp"
                android:shadowColor="#FFFFFF"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#A3A3A3"
                android:textColorLink="#FFFFFF" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/register_book"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#FFFFFF"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/button_cad2"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="38dp" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/qr_code"
        android:layout_width="411dp"
        android:layout_height="0dp"
        android:background="#85000000"
        android:duration="1000"
        android:fromAlpha="0.0"
        android:padding="150dp"
        android:toAlpha="1.0"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout4"
        app:srcCompat="@drawable/book" />

</LinearLayout>